Modulo contactos ingresar y listado Change-Id: I95c7d9922c2dda4682f756583ccb154d3e8df3f7

--- a/module/Contactos/view/contactos/index/ingresar.phtml
+++ b/module/Contactos/view/contactos/index/ingresar.phtml
@@ -55,10 +55,18 @@ echo $this->formelementerrors ( $ciudad_oculto );
 <ul class="error_container bs-callout bs-callout-danger">
 
 </ul>
+ <table cellspacing="0" cellpadding="0" border="0" align="left" width="100%">
+	<tr>
+		<td width="50" valign="middle"><img src="<?php echo $this->basepath() . '/img/png/contacto_grande.png'?>" border="0" /></td>
+		<td class="titulo_menu_item_pages"><span class="titulo_modulo_pages">Ingresar un nuevo contacto</span><br />Registre toda la informaci&oacute;n solicitada para ingresar un nuevo contacto.</td>
+	</tr>
+	<tr>
+		<td colspan="2" style="padding-bottom: 20px;"><hr /></td>
+	</tr>
+</table>
 <table width="100%" style="font-size: 13px; font-weight: 700;">
 	<tr>
 		<td align="center" style="padding: 20px; padding-top: 0px;">
-		<h1 align="left">Ingresar Contacto</h1><hr />
 		<div class="panel panel-default">
 		<div class="panel-heading panel-heading-txt">&nbsp;</div>
 			<table width="100%" cellpadding="5">
