--- a/module/Contactos/view/contactos/index/listado.phtml
+++ b/module/Contactos/view/contactos/index/listado.phtml
@@ -15,8 +15,8 @@
      <a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action'=>'ingresar'));?>" class="btn btn-primary">
      <img src="<?php echo $this->basepath() . '/img/png/ingresar.png'?>" />Ingresar un nuevo registro</a>
  </div>
-<div style=" width:1250px; overflow: auto; padding-bottom: 100px;  ">
- <table class="table table-striped table-bordered table-hover " style="width: 3000px; font-size: 12px;" >
+<div style=" padding-bottom: 100px;  ">
+ <table class="table table-striped table-bordered table-hover " style="font-size: 12px;" >
  <thead style="">
  <tr>
  	 <th>&nbsp;</th>
@@ -26,6 +26,7 @@
      <th>TIPO DE PERSONA</th>
      <th>NOMBRE</th>
      <th>APELLIDO</th>
+     <!--  
      <th>EMAIL</th>
 	 <th>PAIS</th>
 	 <th>ESTADO</th>
@@ -33,10 +34,11 @@
      <th>IDIOMA</th>
      <th>USUARIO DE REGISTRO</th>
      <th>FECHA DE ACTUALIZACI&Oacute;N</th>
+     -->
     
     <?php if(strtoupper($this->tipo_usuario) != 'O'): ?>
     
-     <!-- DATOS PRIVADOS -->
+     <!-- DATOS PRIVADOS 
      <th>&iquest;ES PRIVADO?</th>
      <th>FECHA DE NACIMIENTO</th>
      <th>DIRECCIO&Oacute;N DE DOMICILIO</th>
@@ -46,7 +48,7 @@
      <th>TEL&Eacute;FONO DE DOMICILIO</th>
      <th>CELULAR PERSONAL</th>
      <th>OBSERVACIONES</th>
-     
+     -->
      <?php endif; ?>
      
  </tr>
@@ -91,6 +93,7 @@
      </td>
      <td><?php echo $this->escapeHtml($contactos->getCon_nombre());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_apellido());?></td>
+     <!-- 
      <td><?php echo $this->escapeHtml($contactos->getCon_email());?></td>
 	 <td><?php echo $this->escapeHtml($contactos->getPais_nombre());?></td>
 	 <td><?php echo $this->escapeHtml($contactos->getEstado_nombre());?></td>
@@ -107,7 +110,8 @@
      </td>
      <td><?php echo $this->escapeHtml($contactos->getCon_usuario());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_fecha_actualizacion());?></td>
-     
+      -->
+      <!-- 
      <?php if(strtoupper($this->tipo_usuario) != 'O'): ?>
        
      <td>
@@ -121,7 +125,7 @@
      <td><?php echo $this->escapeHtml($contactos->getCon_telefono_domicilio_per());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_celular_personal());?></td>
      <td><?php echo $this->escapeHtml($contactos->getCon_observaciones());?></td>
-     
+      -->
      <?php endif; ?>
  </tr>
  <?php endforeach; ?>
