--- a/module/Empresas/view/empresas/empresas/add.phtml
+++ b/module/Empresas/view/empresas/empresas/add.phtml
@@ -1,4 +1,23 @@
-<h1><?php echo $this->title ?></h1>
+ <?php
+ // module/Empresas/view/empresas/empresas/add.phtml:
+
+ $title = 'Ingresar una Nueva Empresa';
+ $this->headTitle($title);
+
+ ?>
+<div class="row">
+	<div class="col-md-12">
+ <table cellspacing="0" cellpadding="0" border="0" align="left" width="100%">
+	<tr>
+		<td width="50" valign="middle"><img src="<?php echo $this->basepath() . '/img/png/empresas_grande.png'?>" border="0" /></td>
+		<td class="titulo_menu_item_pages"><span class="titulo_modulo_pages"><?php echo $this->escapeHtml($title); ?></span><br />Registre toda la información solicitada para ingresar una nueva empresa.</td>
+	</tr>
+	<tr>
+		<td colspan="2" style="padding-bottom: 20px;"><hr /></td>
+	</tr>
+</table>
+</div>
+</div>
 
 <?php
 $form = $this->form;
@@ -27,113 +46,117 @@ echo $this->form ()->openTag ( $form );
 <?php echo $this->formRow($form->get('ESTADO_OCULTO')); ?>
 <?php echo $this->formRow($form->get('CIUDAD_OCULTO')); ?>
 
-<div class="row">
-  	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_NOMBRE')); ?></div>
-  	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_EMP_ID_AUTOCOMPLETAR')); ?></div>  	
+<div class="panel panel-default">
+	<div class="panel-heading panel-heading-txt">&nbsp;</div>
+	<div class="col-md-12"><h3 align="left">Informaci&oacute;n General</h3><hr/></div>
+	<div class="row azul-form-row">
+	  	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_NOMBRE')); ?></div>
+	  	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_EMP_ID_AUTOCOMPLETAR')); ?></div>  	
+	</div>
 
+	<div class="row azul-form-row">
+		<div class="col-md-6"><?php echo $this->formRow($form->get('CAT_EMP_ID')); ?></div>
+	  	<div class="col-md-6"><?php echo $this->formRow($form->get('PAI_ID')); ?></div>
+	</div>
+
+	<div class="row azul-form-row">
+		<div class="col-md-6"><?php echo $this->formRow($form->get('EST_ID')); ?></div>
+		<div class="col-md-6"><?php echo $this->formRow($form->get('CIU_ID')); ?></div>	
+	</div>
+
+	<div class="row azul-form-row">
+	  	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_DIRECCION')); ?></div>
+		<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_SECTOR')); ?></div>
+	</div>
+
+	<div class="row azul-form-row">
+		<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_REFERENCIA')); ?></div>
+	  	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_EMAIL')); ?></div>
+	</div>
+
+	<div class="row azul-form-row">
+		<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_PAGINA_WEB')); ?></div>
+	</div>
 </div>
 
-<div class="row">
-	<div class="col-md-6"><?php echo $this->formRow($form->get('CAT_EMP_ID')); ?></div>
-  	<div class="col-md-6"><?php echo $this->formRow($form->get('PAI_ID')); ?></div>
-
-</div>
-
-<div class="row">
-	<div class="col-md-6"><?php echo $this->formRow($form->get('EST_ID')); ?></div>
-	<div class="col-md-6"><?php echo $this->formRow($form->get('CIU_ID')); ?></div>	
-
-</div>
-
-<div class="row">
-  	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_DIRECCION')); ?></div>
-	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_SECTOR')); ?></div>
-
-</div>
-
-<div class="row">
-	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_REFERENCIA')); ?></div>
-  	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_EMAIL')); ?></div>
-
-</div>
-
-<div class="row">
-	<div class="col-md-6"><?php echo $this->formRow($form->get('EMP_PAGINA_WEB')); ?></div>
-</div>
-
-
-<hr>
-<?php $indice_detalle_contacto=0; ?>
-<table id='detalle_contacto'>
-	<?php if(sizeof($detalles)<=0): ?>
-	<tr>
-		<td><?php echo $this->formRow($form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][TIP_TEL_ID]')); ?></td>
-		<td><?php echo $this->formRow($form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_PAIS]')); ?></td>
-		<td><?php echo $this->formRow($form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_CIUDAD]')); ?></td>
-		<td><?php echo $this->formRow($form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_VALOR]')); ?></td>
-		<td><?php echo $this->formRow($form->get('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_EXTENSION]')); ?></td>
-	</tr>
-	<?php else: ?>
-		<?php foreach($detalles as $key=>$detalle): ?>
-			<tr>
-				<?php 	
-					$tip_tel_id=$form->get('DETALLE_CONTACTO[0][TIP_TEL_ID]'); 
-					$det_con_codigo_pais=$form->get('DETALLE_CONTACTO[0][DET_CON_CODIGO_PAIS]');
-					$det_con_codigo_ciudad=$form->get('DETALLE_CONTACTO[0][DET_CON_CODIGO_CIUDAD]');
-					$det_con_valor=$form->get('DETALLE_CONTACTO[0][DET_CON_VALOR]');
-					$det_con_extension=$form->get('DETALLE_CONTACTO[0][DET_CON_EXTENSION]');
-
-					$tip_tel_id->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][TIP_TEL_ID]'); 
-					$det_con_codigo_pais->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_PAIS]');
-					$det_con_codigo_ciudad->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_CODIGO_CIUDAD]');
-					$det_con_valor->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_VALOR]');
-					$det_con_extension->setName('DETALLE_CONTACTO['.$indice_detalle_contacto.'][DET_CON_EXTENSION]');
-
-					$tip_tel_id->setAttribute('data-group-id',$indice_detalle_contacto); 
-					$det_con_codigo_pais->setAttribute('data-group-id',$indice_detalle_contacto);
-					$det_con_codigo_ciudad->setAttribute('data-group-id',$indice_detalle_contacto);
-					$det_con_valor->setAttribute('data-group-id',$indice_detalle_contacto);
-					$det_con_extension->setAttribute('data-group-id',$indice_detalle_contacto);
-
-					$tip_tel_id->setValue($detalle->getTip_tel_id());
-					$det_con_codigo_pais->setValue($detalle->getDet_con_codigo_pais());
-					$det_con_valor->setValue($detalle->getDet_con_valor());
-					$det_con_extension->setValue($detalle->getDet_con_extension());
+<div class="panel panel-default">
+	<div class="panel-heading panel-heading-txt">&nbsp;</div>
+	<div class="row azul-form-row">
+		<div class="col-md-12"><h3 align="left">N&uacute;meros de Contacto</h3><hr/></div>
+	</div>
+	<div id='detalle_contacto'>
+		<script>
+			var arr = [];
+		</script>
+		<?php for($i=0;$i<$this->max_contactos;$i++): ?>
+			<?php 
+				$tip_tel_id = $form->get('DETALLE_CONTACTO['.$i.'][TIP_TEL_ID]'); 
+				$det_con_codigo_pais = $form->get('DETALLE_CONTACTO['.$i.'][DET_CON_CODIGO_PAIS]'); 
+				$det_con_codigo_ciudad = $form->get('DETALLE_CONTACTO['.$i.'][DET_CON_CODIGO_CIUDAD]'); 
+				$det_con_valor = $form->get('DETALLE_CONTACTO['.$i.'][DET_CON_VALOR]'); 
+				$det_con_extension = $form->get('DETALLE_CONTACTO['.$i.'][DET_CON_EXTENSION]'); 
+			?>
+			<?php if(isset($detalles[$i])): ?>
+				<?php
+					$tip_tel_id->setValue($detalles[$i]->getTip_tel_id());
+					$det_con_codigo_pais->setValue($detalles[$i]->getDet_con_codigo_pais());
+					$det_con_codigo_ciudad->setValue($detalles[$i]->getDet_con_codigo_ciudad());
+					$det_con_valor->setValue($detalles[$i]->getDet_con_valor());
+					$det_con_extension->setValue($detalles[$i]->getDet_con_extension());
 				?>
-				<td><?php echo $this->formRow($tip_tel_id); ?></td>
-				<td><?php echo $this->formRow($det_con_codigo_pais); ?></td>
-				<td><?php echo $this->formRow($det_con_codigo_ciudad); ?></td>
-				<td><?php echo $this->formRow($det_con_valor); ?></td>
-				<td><?php echo $this->formRow($det_con_extension); ?></td>
-			</tr>	
-			<?php $indice_detalle_contacto++;?>
-		<?php endforeach; ?>
-	<?php endif; ?>
-</table>
+				<?php if($detalles[$i]->getDet_con_codigo_ciudad()!=''): ?>
+					<script>
+						arr[<?php echo $i ?>]=String('<?php echo $detalles[$i]->getDet_con_codigo_ciudad(); ?>');
+					</script>
+				<?php endif; ?>
+			<?php endif; ?>
 
-<?php echo $this->formRow($form->get('ADD')); ?>
+			<div class="row azul-form-row">
+				<div class="col-md-2"><?php echo $this->formRow($tip_tel_id); ?></div>
+				<div class="col-md-2"><?php echo $this->formRow($det_con_codigo_pais); ?></div>
+				<div class="col-md-2"><?php echo $this->formRow($det_con_codigo_ciudad); ?></div>
+				<div class="col-md-4"><?php echo $this->formRow($det_con_valor); ?></div>
+				<div class="col-md-2"><?php echo $this->formRow($det_con_extension); ?></div>
+			</div>
+		<?php endfor;?>
+		<script>
+			console.log(arr);
+		</script>
+
+	</div>	
+	<div class="row azul-form-row">
+		<div class="col-md-6">
+			<?php // echo $this->formRow($form->get('ADD')); ?>
+		</div>
+	</div>
+</div>
+
 
 <?php echo $this->formRow($form->get('SUBMIT')); ?>
 
 <?php echo $this->form()->closeTag(); ?>
-	
+
 <script>
 
 	$(document).ready(function(){
 		//Carga del combo box de Códigos de teléfono de Ciudades
 		$(".det_con_codigo_ciudad").prop("disabled", true);
 
-		function codigoCiudadSelect(data_group_id,ciu_id){
-			$(".det_con_codigo_pais[data-group-id="+data_group_id+"]").on('change',function() {
-				ajaxCiudadSelect(this,data_group_id);
-	        });
-			if($(".det_con_codigo_pais[data-group-id="+data_group_id+"]").val()!=''){
-				ajaxCiudadSelect(".det_con_codigo_pais[data-group-id="+data_group_id+"]",data_group_id,ciu_id);	
+		$('.det_con_codigo_pais').each(function(i){
+			if(arr[i]){
+				ajaxCiudadSelect(this,arr[i]);
+			}else{
+				ajaxCiudadSelect(this);
 			}
-		}
+			$(this).on('change',function() {
+				ajaxCiudadSelect(this);
+	        });
+		});
 
-		function ajaxCiudadSelect(element,data_group_id,ciu_id){
+		function ajaxCiudadSelect(element,ciu_id){
 			if($(element).val() != '' && $(element).val() != null){
+
+				var data_group_id=$(element).attr('data-group-id');
 	            $.ajax({
 	                url: "<?php echo $this->url('empresas', array('controller' => 'empresas', 'action' => 'codigoCiudad')) ?>",
 	                type: "POST",
@@ -159,21 +182,12 @@ echo $this->form ()->openTag ( $form );
 				$(".det_con_codigo_ciudad[data-group-id="+data_group_id+"]").append('<option>-- Seleccione --</option>');
 			}
 		}
-		<?php if(sizeof($detalles)<=0): ?>
-			codigoCiudadSelect(0);
-		<?php else: ?>
-
-		<?php foreach($detalles as $key=>$detalle): ?>
-			codigoCiudadSelect(<?php echo $key . ($detalle->getDet_con_codigo_ciudad()!=''?(",'".$detalle->getDet_con_codigo_ciudad()."'"):'') ?>);
-		<?php endforeach; ?>
-		<?php endif; ?>
 
 		//Inicio Bloque Validador JS
 		$("#empresas").validate({
 			errorLabelContainer: $("ul.error_container"),
 			wrapper: 'li',
 			rules: {
-
 				EMP_NOMBRE: {required:true},
 				CAT_EMP_ID: {required:true},
 				PAI_ID: {required: true},
@@ -183,9 +197,7 @@ echo $this->form ()->openTag ( $form );
 				EMP_REFERENCIA: {},
 				EMP_SECTOR: {required: true},
 				EMP_EMAIL: {required: true, email:true},
-				EMP_PAGINA_WEB: {url:true},
-				/*** Seccion Detalle Contacto ***/
-				'DETALLE_CONTACTO[0][DET_CON_VALOR]': {required:true, digits:true}
+				EMP_PAGINA_WEB: {url:true}
 	 		},
 	 		messages:{
 				EMP_NOMBRE: {required:'Nombre es un campo requerido'},
@@ -197,48 +209,54 @@ echo $this->form ()->openTag ( $form );
 				EMP_REFERENCIA: {},
 				EMP_SECTOR: {required: 'Sector es un campo requerido'},
 				EMP_EMAIL: {required: 'Email es un campo requerido',email: 'Ingrese un Email válido'},
-				EMP_PAGINA_WEB: {url: 'Ingrese una Pagina Web válida'},
-				/*** Seccion Detalle Contacto ***/
-				'DETALLE_CONTACTO[0][DET_CON_VALOR]': {required: 'El campo número es requerido', digits:'Ingrese un Número de Teléfono válido'}
-				
+				EMP_PAGINA_WEB: {url: 'Ingrese una Pagina Web válida'}
 	 	 	}
 		});
 
-		//Agregar Nuevo Registro de Detalle Contacto
-		var indice_detalle_contacto=1;
-		$("#add").on('click',function(e){
-			$("table#detalle_contacto tr:last").clone().appendTo('table#detalle_contacto');
-
-			$("table#detalle_contacto tr:last input").each(function(i){
-				$(this).attr('name',$(this).attr('name').replace(''+(indice_detalle_contacto-1),''+indice_detalle_contacto));
-				$(this).attr('data-group-id',indice_detalle_contacto);
-			});
-			$("table#detalle_contacto tr:last select").each(function(i){
-				$(this).attr('name',$(this).attr('name').replace(''+(indice_detalle_contacto-1),''+indice_detalle_contacto));
-				$(this).attr('data-group-id',indice_detalle_contacto);
-			});
-			
-			$(".det_con_valor[data-group-id="+indice_detalle_contacto+"]").rules('add',{
-				required:true,
+		$('.det_con_valor').each(function(i){
+			$(this).rules('add',{
 				digits:true,
 				messages:{
-					required: 'El campo número es requerido ('+indice_detalle_contacto+')', 
-					digits:'Ingrese un Número de Teléfono válido ('+indice_detalle_contacto+')'
+					digits:'Ingrese un Número de Teléfono válido ('+i+')'
 				}
 			});
-
-			codigoCiudadSelect(indice_detalle_contacto); 
-			
-			indice_detalle_contacto++;
 		});
+		$('.det_con_extension').each(function(i){
+			$(this).rules('add',{
+				digits:true,
+				messages:{
+					digits:'Ingrese un Número de Extensión válido ('+i+')'
+				}
+			});
+		});
+
 		/* Autocompletar de Sucursales */
 		$( "#emp_emp_id_autocompletar" ).autocomplete({
-			source: "<?php echo $this->basePath() ?>/empresas/consultaXmlHttp",
-			type: "POST",
-			dataType: "json",
+	        source: function(request, response) {
+            	$.ajax({
+	                url: "<?php echo $this->basePath() ?>/empresas/consultaXmlHttp",
+	                dataType: "json",
+	                type: "POST",
+	                data: {
+	                    term: request.term,
+	                    emp_id: $( "#emp_id" ).val()
+	                },
+	                success: function(data) {
+	                    response(data);
+	                }
+	            });
+        	},
 			select: function(event,ui){
+				alert(ui.item.id);
 				$("#emp_emp_id").val(ui.item.id);
 			}	
 		});
+
+		/* Carga de Estados en Actualización */
+
+		$("#EST_ID").ready(function() {
+			$(this).val('<?php echo $form->get("CIU_ID")->getValue(); ?>');
+		});
+
 	});
 </script>
