--- a/module/Empresas/view/empresas/empresas/index.phtml
+++ b/module/Empresas/view/empresas/empresas/index.phtml
@@ -1,15 +1,28 @@
  <?php
  // module/Album/view/album/album/index.phtml:
 
- $title = 'Mis Empresas';
+ $title = 'Lista de Empresas y Sucursales';
  $this->headTitle($title);
  ?>
- <h1><?php echo $this->escapeHtml($title); ?></h1>
+
+ <table cellspacing="0" cellpadding="0" border="0" align="left" width="100%">
+	<tr>
+		<td width="50" valign="middle"><img src="<?php echo $this->basepath() . '/img/png/empresas_grande.png'?>" border="0" /></td>
+		<td class="titulo_menu_item_pages"><span class="titulo_modulo_pages"><?php echo $this->escapeHtml($title); ?></span><br />Visualizar, buscar y verificar todas las empresas ingresadas en el sistema.</td>
+	</tr>
+	<tr>
+		<td colspan="2" style="padding-bottom: 20px;"><hr /></td>
+	</tr>
+</table>
+
+
  <p>
-     <a href="<?php echo $this->url('empresas', array('action'=>'add'));?>" class="btn btn-primary">Crear Nueva Empresa</a>
+     <a href="<?php echo $this->url('empresas', array('action'=>'add'));?>" class="btn btn-primary">
+     	<img src="<?php echo $this->basepath() . '/img/png/ingresar.png'?>" />Ingresar una Nueva Empresa
+     </a>
  </p>
 <div id="table">
- <table class="table">
+  <table class="table table-striped table-bordered table-hover " style="font-size: 12px;" >
  	<thead>
  <tr>
      <th>Empresa</th>
