--- a/module/Empresas/view/empresas/empresas/index.phtml
+++ b/module/Empresas/view/empresas/empresas/index.phtml
@@ -34,7 +34,7 @@
 <tbody>
  <?php foreach ($empresas as $empresa) : ?>
  <tr>
-     <td><?php echo $this->escapeHtml($empresa->emp_nombre);?></td>
+     <td><?php echo ($empresa->nivel>0?'&nbsp;|--- ':'') ?><?php echo $this->escapeHtml($empresa->emp_nombre);?></td>
      <td><?php echo $this->escapeHtml($empresa->emp_email);?></td>
      <td><?php echo $this->escapeHtml($empresa->emp_pagina_web);?></td>
      <td><a href='edit/<?php echo $this->escapeHtml($empresa->emp_id);?>'>Editar</a></td>     
@@ -58,7 +58,8 @@
 						"sNext":     "Siguiente",
 						"sPrevious": "Anterior"
 					}
-				}
+				},
+				"aaSorting": []
 			});
 		});
 </script>
