--- a/module/Contactos/view/contactos/index/listado.phtml
+++ b/module/Contactos/view/contactos/index/listado.phtml
@@ -26,107 +26,44 @@
      <th>TIPO DE PERSONA</th>
      <th>NOMBRE</th>
      <th>APELLIDO</th>
-     <!--  
-     <th>EMAIL</th>
-	 <th>PAIS</th>
-	 <th>ESTADO</th>
-     <th>CIUDAD</th>
-     <th>IDIOMA</th>
-     <th>USUARIO DE REGISTRO</th>
-     <th>FECHA DE ACTUALIZACI&Oacute;N</th>
-     -->
-    
-    <?php if(strtoupper($this->tipo_usuario) != 'O'): ?>
-    
-     <!-- DATOS PRIVADOS 
-     <th>&iquest;ES PRIVADO?</th>
-     <th>FECHA DE NACIMIENTO</th>
-     <th>DIRECCIO&Oacute;N DE DOMICILIO</th>
-     <th>EMAIL PERSONAL</th>
-     <th>C&Oacute;DIGO DE PA&Iacute;S</th>
-     <th>C&Oacute;DIGO DE CIUDAD</th>
-     <th>TEL&Eacute;FONO DE DOMICILIO</th>
-     <th>CELULAR PERSONAL</th>
-     <th>OBSERVACIONES</th>
-     -->
-     <?php endif; ?>
-     
  </tr>
  </thead>
  <tbody>
- <?php foreach ($this->contactos as $contactos) : ?>
+ <?php 
+ foreach ($this->contactos as $carta) : ?>
  <tr>
- 	 <td><a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'editar', 'id' => $contactos->getCon_id(), 'lang' => $contactos->getCon_idioma()))?>" title="Actualizar" alt="Actualizar">ACT.</a></td>
+ 	 <td width="100">
+ 	 	<a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'editar', 'id' => $carta->getCon_id()))?>" title="Actualizar" alt="Actualizar">Editar</a>
+ 	 	
+ 	 	<?php
+ 	 	$activo = $carta->getCon_estado();
+ 	 	
+ 	 	if(strtoupper($activo) == 'A'): ?>
+ 	 	| <a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'eliminar', 'id' => $carta->getCon_id()))?>" title="Dar de baja" alt="Dar de baja">Eliminar</a>
+ 	 	<?php else:?>
+ 	 		<?php if(strtoupper($this->tipo_usuario) == 'A'): ?>
+ 	 			| <a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'activar', 'id' => $carta->getCon_id()))?>" title="Activar" alt="Activar">Activar</a>
+			<?php else:?>
+				&nbsp;
+ 	 		<?php endif;?>
+ 	 	<?php endif;?>
+ 	 </td>
      <td>
      <?php 
-     
-     	$empresa = $contactos->getSucursal_nombre();
+     	$empresa = $carta->getSucursal_nombre();
      
      	if(!isset($empresa) || is_null($empresa)){
-     		echo $this->escapeHtml($contactos->getEmpresa_nombre());
+     		echo $this->escapeHtml($carta->getEmpresa_nombre());
      	}else{
-     		echo $this->escapeHtml($contactos->getSucursal_nombre());
+     		echo $this->escapeHtml($carta->getSucursal_nombre());
      	}
      	?>
-     
-     	
      </td>
-     <td><?php echo $this->escapeHtml($contactos->getEmpresa_nombre());?></td>
-     <td>
-     	<?php 
-      		if(strtoupper($contactos->getCon_idioma()) == 'E'):
-      			echo $this->escapeHtml($contactos->getCargo_descripcion_es());
-      		else: 
-   	  			echo $this->escapeHtml($contactos->getCargo_descripcion_en());
-  			endif;
-  		?>
-     </td>
-     <td>
-    	 <?php 
-      		if(strtoupper($contactos->getCon_idioma()) == 'E'):
-      			echo $this->escapeHtml($contactos->getTipo_persona_descripcion_es());
-      		else: 
-   	  			echo $this->escapeHtml($contactos->getTipo_persona_descripcion_en());
-  			endif;
-  		?>
-     
-     </td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_nombre());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_apellido());?></td>
-     <!-- 
-     <td><?php echo $this->escapeHtml($contactos->getCon_email());?></td>
-	 <td><?php echo $this->escapeHtml($contactos->getPais_nombre());?></td>
-	 <td><?php echo $this->escapeHtml($contactos->getEstado_nombre());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCiudad_nombre());?></td>
-     
-     <td>
-     	<?php
-     		if(strtoupper($contactos->getCon_idioma()) == 'E'){
-     			echo 'Espa&ntilde;ol';
-     		}else{
-     			echo 'Ingl&eacute;s';
-     		}
-     	?>
-     </td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_usuario());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_fecha_actualizacion());?></td>
-      -->
-      <!-- 
-     <?php if(strtoupper($this->tipo_usuario) != 'O'): ?>
-       
-     <td>
-     <?php if(strtoupper($contactos->getCon_privado()) == 'S'): echo 'SI'; else: echo 'NO'; endif;?>
-     </td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_fecha_nacimiento_personal());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_direccion_domicilio_per());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_email_personal());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_codigo_pais());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_codigo_ciudad());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_telefono_domicilio_per());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_celular_personal());?></td>
-     <td><?php echo $this->escapeHtml($contactos->getCon_observaciones());?></td>
-      -->
-     <?php endif; ?>
+     <td><?php echo $this->escapeHtml($carta->getEmpresa_nombre());?></td>
+     <td><?php echo $this->escapeHtml($carta->getCon_tip_per_es());?></td>
+     <td><?php echo $this->escapeHtml($carta->getCon_descripcion_es());?></td>
+     <td><?php echo $this->escapeHtml($carta->getCon_nombre());?></td>
+     <td><?php echo $this->escapeHtml($carta->getCon_apellido());?></td>
  </tr>
  <?php endforeach; ?>
  </tbody>
