--- a/module/Empresas/view/empresas/empresas/index.phtml
+++ b/module/Empresas/view/empresas/empresas/index.phtml
@@ -25,20 +25,20 @@
   <table class="table table-striped table-bordered table-hover " style="font-size: 12px;" >
  	<thead>
  <tr>
+ 	<th>&nbsp;</th> 
      <th>Empresa</th>
      <th>Email</th>
      <th>Página Web</th>
-     <th>Editar</th>    
+        
  </tr>
 </thead>
 <tbody>
  <?php foreach ($empresas as $empresa) : ?>
  <tr>
+ 	<td><a href='edit/<?php echo $this->escapeHtml($empresa->emp_id);?>'>Editar</a></td>
      <td><?php echo ($empresa->nivel>0?'&nbsp;|--- ':'') ?><?php echo $this->escapeHtml($empresa->emp_nombre);?></td>
      <td><?php echo $this->escapeHtml($empresa->emp_email);?></td>
      <td><?php echo $this->escapeHtml($empresa->emp_pagina_web);?></td>
-     <td><a href='edit/<?php echo $this->escapeHtml($empresa->emp_id);?>'>Editar</a></td>     
-     
  </tr>
  <?php endforeach; ?>
 </tbody>
