--- a/module/Usuarios/view/layout/layoutCorrespondencia.phtml
+++ b/module/Usuarios/view/layout/layoutCorrespondencia.phtml
@@ -292,7 +292,7 @@
 						<li><img src=" <?php echo $this->basepath() . '/img/png/home.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('usuarios', array('controller' => 'index', 'action' => 'index'))?>">Inicio</a></li>
 						<li><img src=" <?php echo $this->basepath() . '/img/png/contacto.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('contactos', array('controller' => 'index', 'action' => 'listado'))?>">Contactos</a></li>
 						<li><img src=" <?php echo $this->basepath() . '/img/png/empresas.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('empresas', array('controller' => 'index', 'action' => 'index'))?>">Empresas</a></li>
-						<li><img src=" <?php echo $this->basepath() . '/img/png/correspondencia.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('empresas', array('controller' => 'index', 'action' => 'index'))?>">Correspondencia</a></li>
+						<li><img src=" <?php echo $this->basepath() . '/img/png/correspondencia.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('cartas', array('controller' => 'cartas', 'action' => 'listado'))?>">Correspondencia</a></li>
 						<li><img src=" <?php echo $this->basepath() . '/img/png/recepcion.png'?>" /> &nbsp;&nbsp;<a href="<?php echo $this->url('empresas', array('controller' => 'index', 'action' => 'index'))?>">Fe de recepci&oacute;n</a></li>
 					</ul>
     			</td>
