--- a/module/Application/view/layout/layoutCorrespondencia.phtml
+++ b/module/Application/view/layout/layoutCorrespondencia.phtml
@@ -275,7 +275,7 @@
 									<ul class="dropdown-menu">
 										<li><a href="#"><i class="icon-pencil"></i> Actualizar contrase&ntilde;a</a></li>
 										<li class="divider"></li>
-										<li><a href="#"><i class="i"></i> Salir del Sistema</a></li>
+										<li><a href="<?php echo $this->url('application', array('controller' => 'login', 'action' => 'logout'))?>"><i class="i"></i> Salir del Sistema</a></li>
 									</ul>
 								</div>
 							</td>
