--- a/module/Empresas/view/empresas/empresas/index.phtml
+++ b/module/Empresas/view/empresas/empresas/index.phtml
@@ -27,6 +27,7 @@
  <tr>
  	<th>&nbsp;</th> 
      <th>Empresa</th>
+     <th>Sucursal de</th>
      <th>Email</th>
      <th>Página Web</th>
         
@@ -35,8 +36,9 @@
 <tbody>
  <?php foreach ($empresas as $empresa) : ?>
  <tr>
- 	<td><a href='edit/<?php echo $this->escapeHtml($empresa->emp_id);?>'>Editar</a></td>
-     <td><?php echo ($empresa->nivel>0?'&nbsp;|--- ':'') ?><?php echo $this->escapeHtml($empresa->emp_nombre);?></td>
+	 <td><a href='edit/<?php echo $this->escapeHtml($empresa->emp_id);?>'>Editar</a></td>
+     <td><?php echo $this->escapeHtml($empresa->emp_nombre);?></td>
+     <td><?php echo $this->escapeHtml($empresa->padre_nombre);?></td>
      <td><?php echo $this->escapeHtml($empresa->emp_email);?></td>
      <td><?php echo $this->escapeHtml($empresa->emp_pagina_web);?></td>
  </tr>
