Modulo de Cartas Modelo Entidad Relacion Script de BDD
Change-Id: I2534ca194c292b75298ee4cb718cf6dcdc171c73

--- a/module/Application/view/layout/layoutCorrespondencia.phtml
+++ b/module/Application/view/layout/layoutCorrespondencia.phtml
@@ -271,7 +271,7 @@
 									
 								</div>
 								<div class="btn-group">
-									<a class="btn btn-link dropdown-toggle" data-toggle="dropdown" href="#" style="font-size: 18px; padding-left: 4px ;">Emanuel Carrasco &nbsp;<span class="caret"></span></a>
+									<a class="btn btn-link dropdown-toggle" data-toggle="dropdown" href="#" style="font-size: 18px; padding-left: 4px ;"><?php echo $_SESSION['Zend_Auth']['storage']->us_nombre?> &nbsp;<span class="caret"></span></a>
 									<ul class="dropdown-menu">
 										<li><a href="#"><i class="icon-pencil"></i> Actualizar contrase&ntilde;a</a></li>
 										<li class="divider"></li>
