--- a/module/Application/view/application/login/index.phtml
+++ b/module/Application/view/application/login/index.phtml
@@ -12,44 +12,40 @@ echo $this->form()->openTag($form);
 
 ?>
 <div class="container">
-<div class="row">
-	<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-5 col-md-offset-4 col-lg-5 col-lg-offset-3 form-login-header">
-		<img src="<?php echo $this->basepath() . '/img/png/circulo.png'?>" class="form-login-img" />
+
+	<div class="panel panel-default">
+		<div class="panel-heading panel-heading-txt">&nbsp;</div>
+		<div class="col-md-12"><h3 align="left">Ingreso</h3><hr/></div>
+		<div class="row azul-form-row">
+			<div class="col-md-6">
+			<?php 
+			$email = $form->get('usu_usuario');
+			echo $formLabel->openTag().$email->getOption('label');
+			echo $formLabel->closeTag();
+			echo $this->forminput($email);
+			echo $this->formelementerrors($email);
+			
+			?>
+			</div>
+
+			<div class="col-md-6">
+			<?php 
+			$password = $form->get('usu_clave');
+			echo $formLabel->openTag().$password->getOption('label');
+			echo $formLabel->closeTag();
+			echo $this->forminput($password);
+			echo $this->formelementerrors($password);
+			?>
+			</div>
+		</div>
+			<div class="row azul-form-row">
+			<div class="col-md-12">
+					<div class="col-sm-6 col-md-5 col-lg-6"><?php echo $this->formelement($form->get('ingresar')) ?></div>
+			</div>
+		</div>	
 	</div>
 </div>
 
-
-<div class="row">
-<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-5 col-md-offset-4 col-lg-5 col-lg-offset-3 form-login-item">
-	<?php 
-	$email = $form->get('usu_usuario');
-	echo $formLabel->openTag().$email->getOption('label');
-	echo $formLabel->closeTag();
-	echo $this->forminput($email);
-	echo $this->formelementerrors($email);
-	
-	?>
-</div>
-</div>
-<div class="row">
-<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-5 col-md-offset-4 col-lg-5 col-lg-offset-3 form-login-item">
-	<?php 
-	$password = $form->get('usu_clave');
-	echo $formLabel->openTag().$password->getOption('label');
-	echo $formLabel->closeTag();
-	echo $this->forminput($password);
-	echo $this->formelementerrors($password);
-	?>
-</div>
-</div>
-<div class="row">
-<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-5 col-md-offset-4 col-lg-5 col-lg-offset-3 form-login-button">
-	<div class="col-sm-6 col-md-5 col-lg-6"><?php echo $this->formelement($form->get('ingresar')) ?></div>
-	<div class="clearfix visible-xs">&nbsp;</div>
-	<div class="col-sm-6 col-md-7 col-lg-6"><a href="" class="btn btn-info">&iquest;Olvid&oacute; su contrase&ntilde;a?</a></div>
-</div>
-</div>
-</div>
 
 <?php echo $this->form()->closeTag() ?>
 
